# mdindex

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  PMD_DATA_FLOW_DIAGRAMS.md  PMD_REQUIREMENTS.md  README.md  TASK_MANAGEMENT.md  TODO.md  main.py  pmd-example.toml  pmd.toml  pyproject.toml  tach.toml
.beads/: issues.jsonl
.claude/: settings.local.json
.claude/commands/: documentor-stub.md  documentor.md
.claude/skills/codebase-analysis/: CLAUDE.md  README.md  SKILL.md
.claude/skills/work-breakdown/: CLAUDE.md  SKILL.md  WORKBREAKDOWN_SKILL.md
.private-journal/2026-01-02/: 20-54-08-600508.embedding  20-54-08-600508.md
docs/: ARCHITECTURE.md  CLASS_DIAGRAMS.md  COMMAND_LINE.md  DATA_ARCHITECTURE.md  DESIGN_PRINCIPLES.md  GUIDELINES.md  INSTRUMENTATION.md  MACHINE_LEARNING.md  MAINTENANCE.md  METADATA_ARCHITECTURE.md  PMD_SOURCES_INVENTORY.md  tach_report.md
features/: LLAMAINDEX_ARCHITECTURE_PLAN.md  LLAMAINDEX_MIGRATION_ANALYSIS.md  caching_architecture.md  fsspec-source-v2.md  fsspec-source.md  improve_test_coverage.md  module-boundary-reorganization.md  monorepo-structure.md  multi-glob-patterns.md  remove-direct-sql-usage.md  sqlalchemy-storage.md
history/: ARIZE-prompt.md  CHANGESET_VECTOR_SEARCH_ADAPTER.md  COMPOSITION_ROOT_PLAN.md  DOCUMENT_URI_PLAN.md  EXPORT_REDUCTION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LLAMAINDEX_LOADER_ADAPTER.md  LOADER_ARCHITECTURE.md  LOADER_ARCHITECTURE_V2.md  METADATA_IMPLEMENTATION_PLAN.md  METADATA_IMPLEMENTATION_PLAN_V2.md  METADATA_REFACTOR_PLAN.md  METADATA_UNIFICATION_PLAN.md  PIPELINE_ISOLATION_PLAN.md  REPOSITORY_INTERFACE_ANALYSIS.md  SCHEMA_CENTRALIZATION_PLAN.md  SEARCH_BACKEND_POLYMORPHISM.md  pmd_store_integration_tests.md  python_analysis_prompt.md  workflow-architecture-proposal-2026-01-11.md
src/pmd/: __init__.py  __main__.py  pyproject.toml
src/pmd/app/: __init__.py  application.py  factory.py  protocols.py  types.py
src/pmd/cli/: README.md  __init__.py  main.py
src/pmd/cli/commands/: __init__.py  collection.py  index.py  search.py  status.py
src/pmd/core/: README.md  __init__.py  config.py  exceptions.py  instrumentation.py  types.py
src/pmd/extraction/: __init__.py  registry.py  types.py
src/pmd/extraction/profiles/: __init__.py  drafts.py  generic.py  obsidian.py
src/pmd/formatters/: __init__.py
src/pmd/llm/: README.md  __init__.py  base.py  dspy_client.py  embeddings.py  factory.py  litellm_provider.py  lm_studio.py  mlx_provider.py  openrouter.py  query_expansion.py  reranker.py
src/pmd/mcp/: README.md  __init__.py  server.py
src/pmd/metadata/: __init__.py  ontology.py
src/pmd/metadata/extraction/: __init__.py  drafts.py  generic.py  obsidian.py  registry.py
src/pmd/metadata/model/: __init__.py
src/pmd/metadata/query/: __init__.py  inference.py  retrieval.py  scoring.py
src/pmd/metadata/store/: __init__.py  repository.py
src/pmd/ontology/: __init__.py  aliases.py  booster_inference.py  inference.py  retrieval.py  scoring.py
src/pmd/ontology/data/: tag_aliases.json
src/pmd/search/: README.md  __init__.py  chunking.py  dspy_modules.py  dspy_rag.py  dspy_retriever.py  fusion.py  pipeline.py  ports.py  scoring.py  text.py
src/pmd/search/adapters/: __init__.py  boost.py  expansion.py  rerank.py  tag.py  text.py  vector.py
src/pmd/search/metadata/: __init__.py  implementations.py  inference.py  parsers.py  profiles.py  registry.py  retrieval.py  scoring.py
src/pmd/search/metadata/data/: tag_ontology.json
src/pmd/services/: README.md  __init__.py  caching.py  container.py  indexing.py  loading.py  loading_llamaindex.py  search.py  status.py
src/pmd/sources/: README.md  __init__.py  auth.py  base.py  entity.py  filesystem.py  http.py  registry.py
src/pmd/sources/content/: __init__.py  base.py  filesystem.py  glob_matcher.py  llamaindex.py  registry.py
src/pmd/sources/metadata/: __init__.py  base.py  drafts.py  obsidian.py  parsing.py  profiles.py  registry.py  types.py
src/pmd/store/: README.md  __init__.py  collections.py  content.py  database.py  document_metadata.py  documents.py  embeddings.py  migrate.py  models.py  schema.py  search.py  source_metadata.py  vector_search.py
src/pmd/store/alembic/: __init__.py  env.py
src/pmd/store/alembic/versions/: 0001_baseline.py  __init__.py
src/pmd/store/migrations/: __init__.py  runner.py
src/pmd/store/migrations/versions/: __init__.py  v0001_initial_schema.py  v0002_rename_source_collections.py
src/pmd/store/repositories/: __init__.py  collections.py  content.py  documents.py  embeddings.py  fts.py  metadata.py  source_metadata.py
src/pmd/utils/: README.md  __init__.py  hashing.py
src/pmd/workflows/: __init__.py  contracts.py
src/pmd/workflows/pipelines/: __init__.py  embedding.py  ingestion.py
tests/: TEST_CASES.md  __init__.py  conftest.py
tests/fakes/: __init__.py  repos.py  search.py
tests/fixtures/test_corpus/: Graph Databases.md  Graph RAG.md  GraphRAG LinkedIn.md  Graviton Q.md  Grid Spreadsheet UI Tools.md  HTTP debugging tools.md  High-level Features.md  Highlight Sync.md  Highlights.md  Home Assistant.md  Home Data!Network Security.md  Home Voltage Monitoring .md  Homelab Decisions.md  Homelab hardware selection for k3s.md  Horrible metal pinging sound on my new Ducky One 3 TKL..! ! r!DuckyKeyboard.md  Host-in-a-Box.md  Hostable Inference Tools with Mobile support.md  Household Digital Services.md  Household VPN Solutions.md  How Asthma is affecting my well being.md  How I Use Tags in Heptabase.md  How do I $y!.md  How should we use Deal Platform (or not)!.md  How to Build Trust.md  How to Fix Keyboard Spring Ping Noise ! Switch and Click.md  How to inspect network traffic from Chrome extensions.md  IOS Capture Utility.md  IP Whitelisting.md  (+33 more)
tests/integration/: conftest.py  test_collection_indexing.py  test_corpus_hybrid_search.py  test_corpus_vector_search.py  test_embeddings.py  test_loader_indexer_flow.py  test_metadata_search.py  test_services_vector.py  test_sql_consolidation.py  test_vector_search.py
tests/pmd/: conftest.py
(+171 files in other folders)
