[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmd"
version = "1.0.0"
description = "Python Markdown Search - Hybrid search engine for markdown documents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mike", email = "mike@example.com"},
]
license = {text = "MIT"}

dependencies = [
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "mlx-lm>=0.29.1",
    "mlx-embeddings>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
pmd = "pmd.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
