[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdindex"
version = "1.0.0"
description = "Python Markdown Search - Hybrid search engine for markdown documents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mike", email = "mike@example.com"},
]
license = {text = "MIT"}

dependencies = [
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "mlx-lm>=0.29.1",
    "mlx-embeddings>=0.0.5",
    "loguru>=0.7.3",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "arize-phoenix[all]>=12.27.0",
    "arize-phoenix-otel>=0.14.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
pmd = "pmd.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/pmd --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/pmd"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "tach>=0.33.0",
]
