[project]
name = "mdindex"
version = "1.0.0"
description = "Python Markdown Search - Hybrid search engine for markdown documents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mike", email = "mike@example.com"},
]
license = {text = "MIT"}

dependencies = [
    "pmd",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "tach>=0.33.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This project is defined as containing one or more apps, with 
# libraries shipped in `src/`; everything for an app or library
# is self-contained with the exception of tool configuration.
# TODO: allow libraries to be independently testable.

[tool.uv.workspace]
members = ["src/pmd"]

[tool.uv.sources]
pmd = { workspace = true }

# Include app/ directory as part of root package (non-distributable)
[tool.hatch.build.targets.wheel]
packages = ["app"]

# Shared tool config across the workspace
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/pmd --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/pmd", "app"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "tach>=0.33.0",
]
