[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmd"
version = "1.0.0"
description = "Python Markdown Search - Hybrid search engine for markdown documents"
readme = "../../README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mike", email = "mike@example.com"},
]
license = {text = "MIT"}

dependencies = [
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "mlx-lm>=0.29.1",
    "mlx-embeddings>=0.0.5",
    "loguru>=0.7.3",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "arize-phoenix[all]>=12.27.0",
    "arize-phoenix-otel>=0.14.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "fsspec>=2024.0.0",
    "litellm>=1.50.0",
    "dspy>=2.5.0",
]

[project.optional-dependencies]
loaders = [
    "llama-index-core>=0.11.0",
    "llama-index-readers-web>=0.2.0",
    "llama-index-readers-file>=0.2.0",
]

[project.scripts]
pmd = "pmd.cli.main:main"

# Flat layout: pyproject.toml is co-located with package files in src/pmd/
# For wheel builds, include current directory as the 'pmd' package
[tool.hatch.build.targets.wheel]
packages = ["."]

# For editable installs, add the parent directory (src/) to Python path
# This allows 'import pmd' to find src/pmd/ as a package
[tool.hatch.build.targets.editable]
dev-mode-dirs = [".."]